ChangeLog for ARQ
=================

==== ARQ 2.8.10

+ Bug fix: SUM and AVG over errors didn't generate an error as they should do.

==== ARQ 2.8.9

+ Add TSVInput processor (JENA-69 / Laurent Pellegrino) 
+ Added DatasetGraph.add(g,s,p,o) and .delete(g,s,p,o).
  (JENA-65)
+ Aggregates COUNT(?x) and COUNT(DISTINCT ?x) now skips errors in their expressions
  rather than evaluating to an error (SPARQL 1.1 Query Last Call compliance).   

==== ARQ 2.8.8

+ Added QueryExecution.setTimeout that uses the abort mechanism below to stop queries after
  a preset period of time.

+ Query cancellation: method for QueryExecution.abort() can now be called by any thread at any time.
  The effect is to stop the query execution as soon as possible.
  After calling .abort(), at some time. .hasNext() and .next() will throw an exception if called.
  Exactly when this happens is not defined - it may be immediately.

+ "arq.update --dump" : Output is now N-quads.

+ riot command: Output now abbreviates bNode labels.

+ SPARQL 1.1: Behaviour change: aggregates where the accumulation cause an error now cause the 
  AVG of 1,"two", 3 is now an error, was "two" is skipped
  (and most likely, the error causes unbound in the SELECT expression) 

+ Bug fix: Handling of UNDEF in BINDINGS

+ RIOT: Better handling of file names with spaces in them for base URI. 

+ Notice: A separate LARQ module is under development - this will use Lucene 3.x.y 

+ Bug fix: RIOT: Cope with UTF-8 files with a BOM.

+ Add scope checking rules as required by SPARQL 1.1
  Illegal in SPARQL 1.1:
     Reuse of variables in assignments (i.e. "AS ?x" and ?x potentially bound)
     SELECT * {} GROUP BY (reamins legal in ARQ language)

+ Bug fix: FILTERs did not always get moved to the end of groups properly 
           (sometimes only to end of BGPs). 
           This effects some FILTER the LET combinations using the same variable.  

==== ARQ 2.8.7

SPARQL 1.1 Function library: