@@ -1,25 +1,0 @@
-<?xml version="1.0"?>
-<sparql xmlns="http://www.w3.org/2005/sparql-results#">
-  <head>
-    <variable name="x"/>
-    <variable name="g"/>
-  </head>
-  <results>
-    <result>
-      <binding name="x">
-        <uri>http://example/b</uri>
-      </binding>
-      <binding name="g">
-        <uri>file:///C:/home/afs/Projects/ARQ/testing/ARQ/SubQuery/data-sq.ttl</uri>
-      </binding>
-    </result>
-    <result>
-      <binding name="x">
-        <uri>http://example/a</uri>
-      </binding>
-      <binding name="g">
-        <uri>file:///C:/home/afs/Projects/ARQ/testing/ARQ/SubQuery/data-sq.ttl</uri>
-      </binding>
-    </result>
-  </results>
-</sparql>
