@@ -1,6 +1,0 @@
-PREFIX : <http://example/> 
-
-SELECT ?s
-{
-  { SELECT * { ?s a ?o } }
-}
