@@ -1,0 +1,6 @@
+PREFIX : <http://example/> 
+
+SELECT ?s
+{
+  { SELECT * { ?s a ?o } }
+}
