@@ -1,6 +1,0 @@
-PREFIX : <http://example/> 
-
-SELECT *
-{
-  SELECT ?s { ?s a ?o }
-}
