@@ -1,0 +1,6 @@
+PREFIX : <http://example/> 
+
+SELECT *
+{
+  SELECT ?s { ?s a ?o }
+}
